[gd_scene load_steps=21 format=2]

[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/ForestBoss.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://state/StateMachine.tscn" type="PackedScene" id=3]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/ForestBossFSM.gd" type="Script" id=4]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/Spawn.gd" type="Script" id=5]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/RoamSequence.gd" type="Script" id=6]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/Wait.gd" type="Script" id=7]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/MoveTo.gd" type="Script" id=8]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/CQC.gd" type="Script" id=9]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/SummonCreeps.gd" type="Script" id=10]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/SummonSomeCreeps.gd" type="Script" id=11]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/SummonLotsCreeps.gd" type="Script" id=12]
[ext_resource path="res://ARPG/Ennemies/Boss/ForestBoss/Die.gd" type="Script" id=13]

[sub_resource type="Animation" id=4]
resource_name = "Attack1Test"
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0, 0.0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Attack2Test"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0.529412, 0.0470588, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Attack3Test"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0.0196078, 0.0117647, 0.796078, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "Attack4Test"
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 0, 0, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25, 0.5, 0.75, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1, 1 ), Vector2( 1, 0.7 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "Spawn"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 158.678, 156.002 )

[node name="ForestBoss" type="KinematicBody2D"]
position = Vector2( 1693.38, 879.13 )
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack1Test = SubResource( 4 )
anims/Attack2Test = SubResource( 5 )
anims/Attack3Test = SubResource( 6 )
anims/Attack4Test = SubResource( 7 )
anims/Idle = SubResource( 2 )
anims/Spawn = SubResource( 3 )

[node name="AnimatedSprite" type="Sprite" parent="."]
scale = Vector2( 5, 5 )
texture = ExtResource( 2 )

[node name="StateMachine" parent="." instance=ExtResource( 3 )]
script = ExtResource( 4 )

[node name="Spawn" type="Node" parent="StateMachine"]
script = ExtResource( 5 )

[node name="RoamSequence" type="Node" parent="StateMachine"]
script = ExtResource( 6 )

[node name="Wait" type="Node" parent="StateMachine/RoamSequence"]
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="StateMachine/RoamSequence/Wait"]
wait_time = 3.0

[node name="MoveTo" type="Node" parent="StateMachine/RoamSequence"]
script = ExtResource( 8 )

[node name="CQC" type="Node" parent="StateMachine"]
script = ExtResource( 9 )

[node name="SummonFewCreeps" type="Node" parent="StateMachine"]
script = ExtResource( 10 )

[node name="SummonSomeCreeps" type="Node" parent="StateMachine"]
script = ExtResource( 11 )

[node name="SummonLotsCreeps" type="Node" parent="StateMachine"]
script = ExtResource( 12 )

[node name="Die" type="Node" parent="StateMachine"]
script = ExtResource( 13 )

[node name="Area2D" type="Area2D" parent="."]
editor/display_folded = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]

[node name="Tween" type="Tween" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="animation_finished" from="AnimationPlayer" to="StateMachine" method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="StateMachine/RoamSequence/Wait/Timer" to="StateMachine/RoamSequence/Wait" method="_on_Timer_timeout"]
